log
Tue 07 May 2024 02:58:32 PM UTC: 
 tests:  1|8
total_score: 0/70
c5d4496
Tue 07 May 2024 03:12:16 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
2d9d601
Tue 07 May 2024 03:12:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c188b0c
Tue 07 May 2024 03:17:45 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  4|7
total_score: 5/70
9ac8e95
Tue 07 May 2024 03:18:37 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
600f655
Tue 07 May 2024 03:24:06 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3de95da
Tue 07 May 2024 03:24:50 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|7
total_score: 5/70
23cd9bd
Tue 07 May 2024 03:25:55 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
56b8c76
Tue 07 May 2024 03:27:30 PM UTC: 
 treemap.c | 19 ++++++++-----------
 1 file changed, 8 insertions(+), 11 deletions(-)
 tests:  0|0
a813d3e
Tue 07 May 2024 03:28:35 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
769f15e
Tue 07 May 2024 03:29:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
03ba206
